@@ -1,7 +1,7 @@
 PyScene
 =======
 * My boiler plate for pygame.
-* Has widgets Button, Textbox, Text
+* Has widgets Button, ToggleButton, Textbox, Text
 
 ## Requirements ##
 * Made in linux (Antergos (Arch Linux))
@@ -10,8 +10,6 @@ PyScene
 
 ### TODO ###
 * Some polishing
-* Make more style for buttons and text boxes.
-* Maybe polish simple_games. Most games don't have ending.
 * simple_games Memory make better images.
 
 #### simple_games.py ####
